--- a/hw09/src/main/resources/templates/allAuthors.html
+++ b/hw09/src/main/resources/templates/allAuthors.html
@@ -62,7 +62,7 @@
 </table>
 <p/>
 <div>
-    <a href="pageStart.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
+    <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
 </div>
 </body>
 </html>
