--- a/hw09/src/main/resources/templates/error.html
+++ b/hw09/src/main/resources/templates/error.html
@@ -8,7 +8,7 @@
 <h3 th:text="#{error-page}">Error page</h3>
 <p/>
 <div>
-    <a href="pageStart.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
+    <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
 </div>
 </body>
 </html>
