Корректировка визуальной составляющей. Тесты контроллеров

--- a/hw09/src/main/resources/templates/allCommentsByBook.html
+++ b/hw09/src/main/resources/templates/allCommentsByBook.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-<h3 th:text="#{comment-table-header(${bookId})}">All comments on the book</h3>
+<h3 th:text="#{comment-table-header(${book.title})}">All comments on the book</h3>
 
 <table class="comment">
     <thead>
