--- a/hw09/src/main/resources/templates/allBooks.html
+++ b/hw09/src/main/resources/templates/allBooks.html
@@ -53,8 +53,7 @@
         <th th:text="#{book-field-title}">Title</th>
         <th th:text="#{book-field-author}">Author</th>
         <th th:text="#{book-field-genre}">Genre</th>
-        <th th:text="#{table-column-action}">Action</th>
-        <th th:text="#{table-column-action}">Action</th>
+        <th th:text="#{comment-field-header}" colspan="2">Action</th>
         <th th:text="#{table-column-action}">Action</th>
     </tr>
     </thead>
@@ -65,13 +64,13 @@
         <td th:text="*{author.fullName}">George Orwell</td>
         <td th:text="*{genre.name}">Dystopian novel</td>
         <td>
-            <a href="singleBook.html" th:href="@{/book/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
-        </td>
-        <td>
             <a href="allCommentsByBook.html" th:href="@{/comment(bookId=*{id})}" th:text="#{comment-button-caption}">Get comments</a>
         </td>
         <td>
             <a href="addComment.html" th:href="@{/comment/new(bookId=*{id})}" th:text="#{add-button-caption}">Add</a>
+        </td>
+        <td>
+            <a href="singleBook.html" th:href="@{/book/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
         </td>
     </tr>
     </tbody>
