--- a/hw09/src/main/resources/templates/singleBook.html
+++ b/hw09/src/main/resources/templates/singleBook.html
@@ -59,13 +59,17 @@
     </div>
 
     <div class="row">
-        <label for="book-authorId-input" th:text="#{book-field-author} + ':'">Author:</label>
-        <input id="book-authorId-input" name="authorId" type="text" th:value="*{author.id}" value="2"/>
+        <label for="book-authorId-select" th:text="#{book-field-author} + ':'">Author:</label>
+        <select id="book-authorId-select" name="authorId">
+            <option th:each="author : ${authors}" th:text="${author.fullName}" th:value="${author.id}">George Orwell</option>
+        </select>
     </div>
 
     <div class="row">
-        <label for="book-genreId-input" th:text="#{book-field-genre} + ':'">Genre:</label>
-        <input id="book-genreId-input" name="genreId" type="text" th:value="*{genre.id}" value="3"/>
+        <label for="book-genreId-select" th:text="#{book-field-genre} + ':'">Genre:</label>
+        <select id="book-genreId-select" name="genreId">
+            <option th:each="genre : ${genres}" th:text="${genre.name}" th:value="${genre.id}">Dystopian novel</option>
+        </select>
     </div>
 
     <div class="row">
