--- a/hw09/src/main/resources/templates/deleteBook.html
+++ b/hw09/src/main/resources/templates/deleteBook.html
@@ -46,7 +46,7 @@
 <body>
 
 <form id="delete-form" action="deleteBook.html" th:action="@{/book/{id}/del(id=${id})}" th:method="post">
-    <h3 th:text = "#{confirm-header}">Are you sure?</h3>
+    <h3 th:text = "#{confirm-header(${book.title})}">Are you sure?</h3>
 
     <div class="row">
         <button type="submit" th:text="#{confirm-button-caption}">Confirm</button>
