--- a/hw09/src/main/resources/templates/addComment.html
+++ b/hw09/src/main/resources/templates/addComment.html
@@ -45,12 +45,13 @@
 </head>
 <body>
 
-<form id="add-form" action="addComment.html" th:action="@{/comment/new(bookId=${bookId})}" th:method="post">
+<form id="add-form" action="addComment.html" th:action="@{/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
     <h3 th:text = "#{comment-add-form-header}">Add new:</h3>
 
     <div class="row">
         <label for="comment-description-input" th:text="#{comment-field-description} + ':'">Description:</label>
         <input id="comment-description-input" name="description" type="text" value="New comment"/>
+        <div class="errors" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Wrong description</div>
     </div>
 
     <div class="row">
