Работа над ошибками

--- a/hw10/src/main/resources/templates/singleBook.html
+++ b/hw10/src/main/resources/templates/singleBook.html
@@ -76,7 +76,7 @@
     <div class="row">
         <button type="submit" th:text="#{save-button-caption}">Save</button>
 
-        <a href="deleteBook.html" th:href="@{/book/{id}/del(id=${id})}">
+        <a href="deleteBook.html" th:href="@{/book/{id}/del(id=*{id})}">
             <button type="button" th:text="#{delete-button-caption}">Delete</button>
         </a>
     </div>
