--- a/hw10/src/main/resources/templates/error.html
+++ b/hw10/src/main/resources/templates/error.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Error page</title>
+    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
-<h3 th:text="#{error-page(${message})}">Error page</h3>
-<p/>
-<div>
-    <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
-</div>
+    <h2 class="errors" th:text="#{error-page(${message})}">Error page</h2>
+    <p/>
+    <div>
+        <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
+    </div>
 </body>
 </html>
