--- a/hw10/src/main/resources/templates/deleteComment.html
+++ b/hw10/src/main/resources/templates/deleteComment.html
@@ -3,35 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Delete comment</title>
-    <style type="text/css">
-        body {
-            padding: 50px;
-        }
-
-        label {
-            display: inline-block;
-            width: 100px;
-        }
-
-        input:read-only {
-            background: lightgray;
-        }
-
-        .row {
-            margin-top: 10px;
-        }
-
-        h3 {
-            background-image: url("../static/listmark.png");
-            background-repeat: no-repeat;
-            padding: 2px;
-            padding-left: 30px;
-        }
-
-        .errors {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 
     <style type="text/css" th:inline="text">
         [[h3]] {
@@ -40,7 +12,6 @@
             padding: 2px;
             padding-left: 30px;
         }
-
     </style>
 </head>
 <body>
