--- a/hw10/src/main/resources/templates/start.html
+++ b/hw10/src/main/resources/templates/start.html
@@ -3,44 +3,19 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Start page</title>
-    <style type="text/css">
-        body {
-            padding: 50px;
-        }
-
-        h3 {
-            background-image: url("../static/listmark.png");
-            background-repeat: no-repeat;
-            padding: 2px;
-            padding-left: 30px;
-        }
-    </style>
-
-    <style type="text/css" th:inline="text">
-        [[h3]] {
-            background-image: url([[@{/listmark.png}]]);
-            background-repeat: no-repeat;
-            padding: 2px;
-            padding-left: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
-
 <body>
-<h3 th:text="#{lang-switcher-header}">Select language</h3>
-
-<div>
-    <div><a href="#" th:href="@{/(lang=en)}" th:text="#{en-lang-switch-button-caption}">Language - EN</a></div>
-    <div><a href="#" th:href="@{/(lang=ru)}" th:text="#{ru-lang-switch-button-caption}">Language - RU</a></div>
-</div>
-
-<h3 th:text="#{page-switcher-header}">Select page</h3>
-
-<div>
-    <div><a href="allBooks.html" th:href="@{/book}" th:text="#{book-switch-button-caption}">Books</a></div>
-    <div><a href="allAuthors.html" th:href="@{/author}" th:text="#{author-switch-button-caption}">Authors</a></div>
-    <div><a href="allGenres.html" th:href="@{/genre}" th:text="#{genre-switch-button-caption}">Genres</a></div>
-</div>
-
+    <h3 th:text="#{lang-switcher-header}">Select language</h3>
+    <div>
+        <div><a href="#" th:href="@{/(lang=en)}" th:text="#{en-lang-switch-button-caption}">Language - EN</a></div>
+        <div><a href="#" th:href="@{/(lang=ru)}" th:text="#{ru-lang-switch-button-caption}">Language - RU</a></div>
+    </div>
+    <h3 th:text="#{page-switcher-header}">Select page</h3>
+    <div>
+        <div><a href="allBooks.html" th:href="@{/book}" th:text="#{book-switch-button-caption}">Books</a></div>
+        <div><a href="allAuthors.html" th:href="@{/author}" th:text="#{author-switch-button-caption}">Authors</a></div>
+        <div><a href="allGenres.html" th:href="@{/genre}" th:text="#{genre-switch-button-caption}">Genres</a></div>
+    </div>
 </body>
 </html>
