--- a/hw10/src/main/resources/templates/allAuthors.html
+++ b/hw10/src/main/resources/templates/allAuthors.html
@@ -24,7 +24,7 @@
     </table>
     <p/>
     <div>
-        <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
+        <a href="start.html" th:href="@{/api/v1/main}" th:text="#{main-page-button-caption}">Main page</a>
     </div>
 </body>
 </html>
