--- a/hw10/src/main/resources/templates/deleteComment.html
+++ b/hw10/src/main/resources/templates/deleteComment.html
@@ -16,13 +16,13 @@
 </head>
 <body>
 
-<form id="delete-form" action="deleteComment.html" th:action="@{/comment/{id}/del(id=${id})}" th:method="post">
+<form id="delete-form" action="deleteComment.html" th:action="@{/api/v1/comment/{id}/del(id=${id})}" th:method="post">
     <h3 th:text = "#{confirm-header(${comment.description})}">Are you sure?</h3>
 
     <div class="row">
         <button type="submit" th:text="#{confirm-button-caption}">Confirm</button>
 
-        <a href="singleComment.html" th:href="@{/comment/__*{id}__}">
+        <a href="singleComment.html" th:href="@{/api/v1/comment/__*{id}__}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
