--- a/hw10/src/main/resources/templates/error.html
+++ b/hw10/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
     <h2 class="errors" th:text="#{error-page(${message})}">Error page</h2>
     <p/>
     <div>
-        <a href="start.html" th:href="@{/}" th:text="#{main-page-button-caption}">Main page</a>
+        <a href="start.html" th:href="@{/api/v1/main}" th:text="#{main-page-button-caption}">Main page</a>
     </div>
 </body>
 </html>
