--- a/hw10/src/main/resources/templates/addComment.html
+++ b/hw10/src/main/resources/templates/addComment.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
-<form id="add-form" action="addComment.html" th:action="@{/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
+<form id="add-form" action="addComment.html" th:action="@{/api/v1/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
     <h3 th:text = "#{comment-add-form-header}">Add new:</h3>
 
     <div class="row">
@@ -18,7 +18,7 @@
     <div class="row">
         <button type="submit" th:text="#{save-button-caption}">Save</button>
 
-        <a href="allBooks.html" th:href="@{/book}">
+        <a href="allBooks.html" th:href="@{/api/v1/book}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
