--- a/hw10/src/main/resources/templates/singleBook.html
+++ b/hw10/src/main/resources/templates/singleBook.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body th:object="${book}">
-<form id="edit-form" action="singleBook.html" th:action="@{/book/__*{id}__}" th:method="post" th:object="${book}">
+<form id="edit-form" action="singleBook.html" th:action="@{/api/v1/book/__*{id}__}" th:method="post" th:object="${book}">
     <h3 th:text = "#{book-form-header}">Book Info:</h3>
     <div class="row">
         <label for="id-input" th:text="#{book-field-id} + ':'">ID:</label>
@@ -31,12 +31,12 @@
     </div>
     <div class="row">
         <button type="submit" th:text="#{save-button-caption}">Save</button>
-        <a href="deleteBook.html" th:href="@{/book/{id}/del(id=*{id})}">
+        <a href="deleteBook.html" th:href="@{/api/v1/book/{id}/del(id=*{id})}">
             <button type="button" th:text="#{delete-button-caption}">Delete</button>
         </a>
     </div>
     <div class="row">
-        <a href="allBooks.html" th:href="@{/book}">
+        <a href="allBooks.html" th:href="@{/api/v1/book}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
