--- a/hw10/src/main/resources/templates/addBook.html
+++ b/hw10/src/main/resources/templates/addBook.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Add book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
 <body>
 <form id="add-form" action="addBook.html" th:action="@{/api/v1/book/new}" th:method="post" th:object="${book}">
@@ -30,7 +31,7 @@
     </div>
 
     <div class="row">
-        <button type="submit" th:text="#{save-button-caption}">Save</button>
+        <button type="button" onclick="addBook()" th:text="#{save-button-caption}">Save</button>
 
         <a href="allBooks.html" th:href="@{/api/v1/book}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
