--- a/hw10/src/main/resources/templates/addBook.html
+++ b/hw10/src/main/resources/templates/addBook.html
@@ -6,28 +6,24 @@
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body>
-<form id="add-form" action="addBook.html" th:action="@{/api/v1/book/new}" th:method="post" th:object="${book}">
+<body onload="tryAddBook()">
+<form id="add-form" action="addBook.html" th:action="@{/book/new}" th:method="post">
     <h3 th:text = "#{book-form-header}">Book Info:</h3>
 
     <div class="row">
         <label for="book-title-input" th:text="#{book-field-title} + ':'">Title:</label>
-        <input id="book-title-input" name="title" type="text" value="New book"/>
-        <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong title</div>
+        <input id="book-title-input" name="title" type="text" value="New book" maxlength="30" required/>
+<!--        <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong title</div>-->
     </div>
 
     <div class="row">
         <label for="book-authorId-select" th:text="#{book-field-author} + ':'">Author:</label>
-        <select id="book-authorId-select" name="authorId">
-            <option th:each="author : ${authors}" th:text="${author.fullName}" th:value="${author.id}">George Orwell</option>
-        </select>
+        <select id="book-authorId-select" name="authorId"></select>
     </div>
 
     <div class="row">
         <label for="book-genreId-select" th:text="#{book-field-genre} + ':'">Genre:</label>
-        <select id="book-genreId-select" name="genreId">
-            <option th:each="genre : ${genres}" th:text="${genre.name}" th:value="${genre.id}">Dystopian novel</option>
-        </select>
+        <select id="book-genreId-select" name="genreId"></select>
     </div>
 
     <div class="row">
