--- a/hw10/src/main/resources/templates/deleteBook.html
+++ b/hw10/src/main/resources/templates/deleteBook.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8"/>
     <title>Delete book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
 <body>
-    <form id="delete-form" action="deleteBook.html" th:action="@{/api/v1/book/{id}/del(id=${id})}" th:method="post">
-        <h3 th:text = "#{confirm-header(${book.title})}">Are you sure?</h3>
+    <form id="delete-form" action="deleteBook.html" th:action="@{/book/{id}(id=${id})}" th:method="delete">
+        <h3 th:text="#{confirm-header}">Are you sure?</h3>
         <div class="row">
-            <button type="submit" th:text="#{confirm-button-caption}">Confirm</button>
+            <button type="button" th:attr="onclick='deleteBook(' + ${id} +')'" th:text="#{confirm-button-caption}">Confirm</button>
             <a href="singleBook.html" th:href="@{/api/v1/book/__*{id}__}">
                 <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
             </a>
