--- a/hw10/src/main/resources/templates/singleBook.html
+++ b/hw10/src/main/resources/templates/singleBook.html
@@ -4,34 +4,30 @@
     <meta charset="UTF-8"/>
     <title>Edit book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body th:object="${book}">
-<form id="edit-form" action="singleBook.html" th:action="@{/api/v1/book/__*{id}__}" th:method="post" th:object="${book}">
+<body th:attr="onload='showBook(' + ${id} +')'">
+<form id="edit-form" action="singleBook.html" th:action="@{/book/__${id}__}" th:method="put">
     <h3 th:text = "#{book-form-header}">Book Info:</h3>
     <div class="row">
         <label for="id-input" th:text="#{book-field-id} + ':'">ID:</label>
-        <input id="id-input" type="text" readonly="readonly" name="id" th:value="*{id}" value="1"/>
+        <input id="id-input" type="text" readonly="readonly" name="id" value="1" th:value="${id}"/>
     </div>
     <div class="row">
         <label for="book-title-input" th:text="#{book-field-title} + ':'">Title:</label>
-        <input id="book-title-input" name="title" type="text" th:value="*{title}" value="Updated book"/>
-        <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong title</div>
+        <input id="book-title-input" name="title" type="text"/>
     </div>
     <div class="row">
         <label for="book-authorId-select" th:text="#{book-field-author} + ':'">Author:</label>
-        <select id="book-authorId-select" name="authorId">
-            <option th:each="author : ${authors}" th:text="${author.fullName}" th:value="${author.id}">George Orwell</option>
-        </select>
+        <select id="book-authorId-select" name="authorId"></select>
     </div>
     <div class="row">
         <label for="book-genreId-select" th:text="#{book-field-genre} + ':'">Genre:</label>
-        <select id="book-genreId-select" name="genreId">
-            <option th:each="genre : ${genres}" th:text="${genre.name}" th:value="${genre.id}">Dystopian novel</option>
-        </select>
+        <select id="book-genreId-select" name="genreId"></select>
     </div>
     <div class="row">
-        <button type="submit" th:text="#{save-button-caption}">Save</button>
-        <a href="deleteBook.html" th:href="@{/api/v1/book/{id}/del(id=*{id})}">
+        <button type="button" onclick="updateBook()" th:text="#{save-button-caption}">Save</button>
+        <a href="deleteBook.html" th:href="@{/api/v1/book/{id}/del(id=${id})}">
             <button type="button" th:text="#{delete-button-caption}">Delete</button>
         </a>
     </div>
