Исправления по замечаниям

--- a/hw10/src/main/resources/templates/allBooks.html
+++ b/hw10/src/main/resources/templates/allBooks.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>List of all books</title>
+    <title th:text="#{all-books-page}">List of all books</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
@@ -15,35 +15,24 @@
                 <th th:text="#{book-field-title}">Title</th>
                 <th th:text="#{book-field-author}">Author</th>
                 <th th:text="#{book-field-genre}">Genre</th>
-                <th th:text="#{comment-field-header}" colspan="2">Action</th>
-                <th th:text="#{table-column-action}">Action</th>
             </tr>
         </thead>
         <tbody id="book-table">
-            <tr th:each="book : ${books}" th:object="${book}">
-                <td th:text="*{id}">1</td>
-                <td th:text="*{title}">1984</td>
-                <td th:text="*{author.fullName}">George Orwell</td>
-                <td th:text="*{genre.name}">Dystopian novel</td>
-                <td id="comment-get-all">
-                    <a href="allCommentsByBook.html" th:href="@{/api/v1/comment(bookId=*{id})}" th:text="#{comment-button-caption}">Get comments</a>
-                </td>
-                <td id="comment-add">
-                    <a href="addComment.html" th:href="@{/api/v1/comment/new(bookId=*{id})}" th:text="#{add-button-caption}">Add</a>
-                </td>
-                <td id ="book-update">
-                    <a href="singleBook.html" th:href="@{/api/v1/book/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
-                </td>
+            <tr>
+                <td>1</td>
+                <td>1984</td>
+                <td>George Orwell</td>
+                <td>Dystopian novel</td>
             </tr>
         </tbody>
     </table>
     <p/>
     <div>
-        <a href="addBook.html" th:href="@{/api/v1/book/new}" th:text="#{add-button-caption}">Add</a>
+        <a href="addBook.html" th:href="@{/book/new}" th:text="#{add-button-caption}">Add</a>
     </div>
     <p/>
     <div>
-        <a href="start.html" th:href="@{/api/v1/main}" th:text="#{main-page-button-caption}">Main page</a>
+        <a href="start.html" th:href="@{/main}" th:text="#{main-page-button-caption}">Main page</a>
     </div>
 </body>
 </html>
