--- a/hw10/src/main/resources/templates/deleteComment.html
+++ b/hw10/src/main/resources/templates/deleteComment.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Delete comment</title>
+    <title th:text="#{delete-page}">Delete comment</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 
     <style type="text/css" th:inline="text">
@@ -15,14 +15,11 @@
     </style>
 </head>
 <body>
-
-<form id="delete-form" action="deleteComment.html" th:action="@{/api/v1/comment/{id}/del(id=${id})}" th:method="post">
+<form id="delete-form" action="deleteComment.html" th:action="@{/comment/{id}/del(id=${id})}" th:method="post">
     <h3 th:text = "#{confirm-header(${comment.description})}">Are you sure?</h3>
-
     <div class="row">
         <button type="submit" th:text="#{confirm-button-caption}">Confirm</button>
-
-        <a href="singleComment.html" th:href="@{/api/v1/comment/__*{id}__}">
+        <a href="singleComment.html" th:href="@{/comment/__*{id}__}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
