--- a/hw10/src/main/resources/templates/addBook.html
+++ b/hw10/src/main/resources/templates/addBook.html
@@ -2,34 +2,29 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Add book</title>
+    <title th:text="#{add-page}">Add book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
     <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body onload="tryAddBook()">
-<form id="add-form" action="addBook.html" th:action="@{/book/new}" th:method="post">
+<body onload="getCatalogs()">
+<form id="add-form" action="addBook.html" th:action="@{/api/v1/book}" th:method="post">
     <h3 th:text = "#{book-form-header}">Book Info:</h3>
 
     <div class="row">
         <label for="book-title-input" th:text="#{book-field-title} + ':'">Title:</label>
         <input id="book-title-input" name="title" type="text" value="New book" maxlength="30" required/>
-<!--        <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong title</div>-->
     </div>
-
     <div class="row">
-        <label for="book-authorId-select" th:text="#{book-field-author} + ':'">Author:</label>
-        <select id="book-authorId-select" name="authorId"></select>
+        <label for="authorId-select" th:text="#{book-field-author} + ':'">Author:</label>
+        <select id="authorId-select" name="authorId"></select>
     </div>
-
     <div class="row">
-        <label for="book-genreId-select" th:text="#{book-field-genre} + ':'">Genre:</label>
-        <select id="book-genreId-select" name="genreId"></select>
+        <label for="genreId-select" th:text="#{book-field-genre} + ':'">Genre:</label>
+        <select id="genreId-select" name="genreId"></select>
     </div>
-
     <div class="row">
         <button type="button" onclick="addBook()" th:text="#{save-button-caption}">Save</button>
-
-        <a href="allBooks.html" th:href="@{/api/v1/book}">
+        <a href="allBooks.html" th:href="@{/book/}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
