--- a/hw10/src/main/resources/templates/addComment.html
+++ b/hw10/src/main/resources/templates/addComment.html
@@ -2,23 +2,20 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Add comment</title>
+    <title th:text="#{add-page}">Add comment</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
-<form id="add-form" action="addComment.html" th:action="@{/api/v1/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
+<form id="add-form" action="addComment.html" th:action="@{/comment/new(bookId=${bookId})}" th:method="post" th:object="${comment}">
     <h3 th:text = "#{comment-add-form-header}">Add new:</h3>
-
     <div class="row">
         <label for="comment-description-input" th:text="#{comment-field-description} + ':'">Description:</label>
         <input id="comment-description-input" name="description" type="text" value="New comment"/>
         <div class="errors" th:if="${#fields.hasErrors('description')}" th:errors="*{description}">Wrong description</div>
     </div>
-
     <div class="row">
         <button type="submit" th:text="#{save-button-caption}">Save</button>
-
-        <a href="allBooks.html" th:href="@{/api/v1/book}">
+        <a href="singleBook.html" th:href="@{/book/__${bookId}__}">
             <button type="button" th:text="#{cancel-button-caption}">Cancel</button>
         </a>
     </div>
