--- a/hw10/src/main/resources/templates/allAuthors.html
+++ b/hw10/src/main/resources/templates/allAuthors.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>List of all authors</title>
+    <title th:text="#{all-authors-page}">List of all authors</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
+    <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
 </head>
-<body>
+<body onload="showAllAuthors()">
     <h3 th:text="#{author-table-header}">Authors:</h3>
     <table class="element">
         <thead>
@@ -14,8 +15,7 @@
                 <th th:text="#{author-field-fullName}">Name</th>
             </tr>
         </thead>
-
-        <tbody>
+        <tbody id="author-table">
             <tr th:each="author : ${authors}" th:object="${author}">
                 <td th:text="*{id}">1</td>
                 <td th:text="*{fullName}">George Orwell</td>
@@ -23,8 +23,8 @@
         </tbody>
     </table>
     <p/>
-    <div>
-        <a href="start.html" th:href="@{/api/v1/main}" th:text="#{main-page-button-caption}">Main page</a>
+    <div class="row">
+        <a href="start.html" th:href="@{/main}" th:text="#{main-page-button-caption}">Main page</a>
     </div>
 </body>
 </html>
