--- a/hw10/src/main/resources/templates/allCommentsByBook.html
+++ b/hw10/src/main/resources/templates/allCommentsByBook.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>List of all comments on the book</title>
+    <title th:text="#{all-comments-page}">List of all comments on the book</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
@@ -20,14 +20,14 @@
                 <td th:text="*{id}">1</td>
                 <td th:text="*{description}">Relevant</td>
                 <td>
-                    <a href="singleComment.html" th:href="@{/api/v1/comment/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
+                    <a href="singleComment.html" th:href="@{/comment/__*{id}__}" th:text="#{edit-button-caption}">Edit</a>
                 </td>
             </tr>
         </tbody>
     </table>
     <p/>
-    <div>
-        <a href="allBooks.html" th:href="@{/api/v1/book}" th:text="#{back-to-allBooks-button-caption}">Back to books</a>
+    <div class="row">
+        <a href="allBooks.html" th:href="@{/book/}" th:text="#{back-to-allBooks-button-caption}">Back to books</a>
     </div>
 </body>
 </html>
