--- a/hw10/src/main/resources/templates/error.html
+++ b/hw10/src/main/resources/templates/error.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Error page</title>
+    <title th:text="#{error-page}">Error page</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
-    <h2 class="errors" th:text="#{error-page(${message})}">Error page</h2>
+    <h2 class="errors" th:text="#{error-message(${message})}">Error page</h2>
     <p/>
-    <div>
-        <a href="start.html" th:href="@{/api/v1/main}" th:text="#{main-page-button-caption}">Main page</a>
+    <div class="row">
+        <a href="start.html" th:href="@{/main}" th:text="#{main-page-button-caption}">Main page</a>
     </div>
 </body>
 </html>
