--- a/hw10/src/main/resources/templates/start.html
+++ b/hw10/src/main/resources/templates/start.html
@@ -2,20 +2,20 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Start page</title>
+    <title th:text="#{main-page}">Start page</title>
     <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}" type="text/css">
 </head>
 <body>
     <h3 th:text="#{lang-switcher-header}">Select language</h3>
     <div>
-        <div><a href="#" th:href="@{/api/v1/main(lang=en)}" th:text="#{en-lang-switch-button-caption}">Language - EN</a></div>
-        <div><a href="#" th:href="@{/api/v1/main(lang=ru)}" th:text="#{ru-lang-switch-button-caption}">Language - RU</a></div>
+        <div class="row"><a href="#" th:href="@{/main(lang=en)}" th:text="#{en-lang-switch-button-caption}">Language - EN</a></div>
+        <div class="row"><a href="#" th:href="@{/main(lang=ru)}" th:text="#{ru-lang-switch-button-caption}">Language - RU</a></div>
     </div>
     <h3 th:text="#{page-switcher-header}">Select page</h3>
     <div>
-        <div><a href="allBooks.html" th:href="@{/api/v1/book}" th:text="#{book-switch-button-caption}">Books</a></div>
-        <div><a href="allAuthors.html" th:href="@{/api/v1/author}" th:text="#{author-switch-button-caption}">Authors</a></div>
-        <div><a href="allGenres.html" th:href="@{/api/v1/genre}" th:text="#{genre-switch-button-caption}">Genres</a></div>
+        <div class="row"><a href="allBooks.html" th:href="@{/book/}" th:text="#{book-switch-button-caption}">Books</a></div>
+        <div class="row"><a href="allAuthors.html" th:href="@{/author/}" th:text="#{author-switch-button-caption}">Authors</a></div>
+        <div class="row"><a href="allGenres.html" th:href="@{/genre/}" th:text="#{genre-switch-button-caption}">Genres</a></div>
     </div>
 </body>
 </html>
