Исправления по замечаниям (кроме тестов). Плюс поправлены методы get/post для добавления комментария в контроллере комментариев (не передавался bookId, что приводило к ошибке)

--- a/hw11/src/main/resources/static/css/style.css
+++ b/hw11/src/main/resources/static/css/style.css
@@ -19,6 +19,16 @@ body {
     width: 50px;
 }
 
+.element li {
+    text-align: left;
+    list-style-type: none;
+}
+
+.element ul {
+    margin-left: 0;
+    padding-left: 0;
+   }
+
 label {
     display: inline-block;
     width: 100px;
